Version: 0.3.x
Date: ZZZZ-YY-XX

o added 'stride' to function 'load_dssp_ts()
------------------------

Version: 0.3.1
Date: 2016-04-28

o added 'printErrors' flag to function 'TIcurve()'
o added 'errorBarThreshold' flag to function 'TIcurve()'
o fixed bug in function 'ramachandran()' for type "fancy"
o added return information to functions where appropriate
o fixed 'xrmsd()' ellipsis
o changed some phrases and the title
------------------------

Version: 0.3
Date: 2016-02-15

o added multiple vector selection by hydrogen bond identifiers to function 'hbond_ts()'
o added argument 'printValues' functionality to function 'TIcurve()'
o removed hard-coding for the filenames of function 'load_dssp_ts()'
o included new functions 'load_timeseries()' and 'timeseries()'
o added argument 'legendPosition' to functions 'rmsd()' and 'rmsf()'
o added labels for axes for function 'xrmsd()'
o renamed title ("Analyses") to comply with the publication title
------------------------